@@ -1,12 +1,5 @@
 package com.project.yozmcafe.service.auth;
 
-import java.util.Arrays;
-import java.util.List;
-import java.util.stream.Collectors;
-
-import org.springframework.stereotype.Service;
-import org.springframework.transaction.annotation.Transactional;
-
 import com.project.yozmcafe.controller.auth.OAuthProvider;
 import com.project.yozmcafe.controller.dto.AuthorizationUrlDto;
 import com.project.yozmcafe.controller.dto.TokenResponse;
@@ -14,6 +7,11 @@ import com.project.yozmcafe.domain.member.Member;
 import com.project.yozmcafe.domain.member.MemberInfo;
 import com.project.yozmcafe.domain.member.MemberRepository;
 import com.project.yozmcafe.service.UnViewedCafeService;
+import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
+
+import java.util.Arrays;
+import java.util.List;
 
 @Service
 @Transactional(readOnly = true)
@@ -36,6 +34,7 @@ public class AuthService {
 
         final Member member = memberRepository.findById(memberInfo.openId())
                 .orElseGet(() -> memberRepository.save(memberInfo.toMember()));
+        memberRepository.flush();
         unViewedCafeService.refillWhenUnViewedCafesSizeUnderTwenty(member);
 
         return new TokenResponse(jwtTokenProvider.createAccessFrom(member.getId()));
@@ -53,6 +52,6 @@ public class AuthService {
     public List<AuthorizationUrlDto> getAuthorizationUrls() {
         return Arrays.stream(OAuthProvider.values())
                 .map(provider -> new AuthorizationUrlDto(provider.getProviderName(), provider.getAuthorizationUrl()))
-                .collect(Collectors.toList());
+                .toList();
     }
 }
